--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,5 +1,88 @@
 @media screen and (max-width: 767.98px) {
+  body {
+    margin: 0;
+    font-family: "Roboto", serif;
+  }
+  main {
+    color: #000;
+  }
+  .menu {
+    background-color: #F6F6F6;
+    border-radius: 15px;
+  }
+  .menu__title {
+    display: flex;
+    align-items: center;
+  }
+  p {
+    border-radius: 15px;
+    background-color: #FFF;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 12px;
+  }
   h1 {
-    background-color: red;
+    font-family: "Shrikland";
+    font-size: 28px;
+    font-weight: 800;
+  }
+  h2 {
+    font-size: 16px;
+    font-weight: 300;
+    text-transform: uppercase;
+  }
+  ul {
+    list-style-type: none;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+  .top_image img {
+    width: 375px;
+    height: 275px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .cta {
+    border-radius: 25px;
+    background: linear-gradient(#9356DC, #FF79DA);
+    padding: 13px 18px;
+    color: white;
+    box-sizing: content-box;
+  }
+  /*******HEADER*******/
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    padding: 30px 0px 31px 0px;
+    flex-direction: column;
+  }
+  #LogoHeader {
+    width: 200px;
+    height: 34px;
+  }
+  /******BODY*******/
+  /*****FOOTER******/
+  Footer {
+    background-color: #353535;
+    color: white;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 22px 20px;
+  }
+  .footer-txt {
+    display: flex;
+    padding: 8px;
+  }
+  #LogoFooter {
+    width: 137px;
+    height: 27px;
+    color: #FFF;
+  }
+  .fa-utensils {
+    color: #FFF;
   }
 }/*# sourceMappingURL=menu.css.map */
