--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,147 +6,252 @@ $black: #000;
 $white: #FFF;
 
 @mixin mobile-only {
-  @media screen and (max-width: 767.98px) {}
+  @media screen and (max-width: 767.98px) {
+
+  }
+}
+@mixin desktop-version {
+  @media screen and (min-width: 767.98px) {
+    @content;
+  }
 }
 
-@media screen and (max-width: 767.98px) {
-  /****** General *****/
+/****** General *****/
+body {
+  margin: 0;
+  font-family: 'Roboto', serif;
+}
 
-  body {
-    margin: 0;
-    font-family: 'Roboto', serif;
+ul {
+  list-style-type: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1 {
+  color: $black;
+  font-family: 'Roboto';
+}
+
+.cta {
+  border-radius: 25px;
+  background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  padding: 13px 18px;
+  margin: auto;
+  color: $white;
+  box-sizing: border-box;
+  margin-bottom: 50px;
+}
+/*******HEADER*******/
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
+
+
+#LogoHeader {
+  width: 200px;
+  height: 34px;
+}
+
+/*****BODY*****/
+.location {
+  background-color: #EAEAEA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+  &__title {
+    font-size: 16px;
+    font-weight: 500;
+    color: #353535;
   }
+}
 
-  ul {
-    list-style-type: none;
-  }
+.fa-location-dot {
+  padding-right: 17px;
+}
 
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
+/********FONCTIONNEMENT*******/
+.reservation {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: $light-grey;
 
-  h1 {
-    color: black;
-    font-family: 'Roboto';
-  }
-
-  .cta {
-    border-radius: 25px;
-    background: linear-gradient(#9356DC, #FF79DA);
-    padding: 13px 18px;
-    color: white;
-    box-sizing: content-box;
-  }
-
-  .card {
-    border-radius: 15px;
-    background-color: $white;
-    margin-bottom: 15px;
-  }
-
-  .card img {
-    border-radius: 20px 20px 0px 0px;
-    width: 100%;
-    height: 231px;
-    object-fit: cover;
-  }
-
-  .card-txt {
-    padding: 0px 0px 15px 15px;
-    font-size: 18px;
+  &__title {
+    font-size: 24px;
     font-weight: 700;
-
-    &__subtitle {
-      font-size: 17px;
-      font-weight: 300;
-    }
+    padding-top: 10px;
   }
 
-  /*******HEADER*******/
+  &__subtitle {
+    font-size: 18px;
+    font-weight: 300;
+  }
+}
 
-  header {
+.operation {
+  color: $black;
+  padding: 18px;
+
+  &__title {
+    font-size: 24px;
+    font-weight: 700;
+  }
+
+  &__button {
+    border-radius: 20px;
+    background-color: $light-grey;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     display: flex;
+    padding: 20px;
     justify-content: center;
-    align-items: center;
-    align-self: center;
-    padding: 30px 0px 31px 0px;
-    flex-direction: column;
+    margin-bottom: 20px;
+    cursor: pointer;
   }
 
-  .location {
-    background-color: #EAEAEA;
-    display: flex;
-    align-items: center;
+  &__text {
+    margin-left: 25px;
+    font-size: 16px;
+    font-weight: 500;
   }
-
-  #LogoHeader {
-    width: 200px;
-    height: 34px;
-  }
-
-  /*****BODY*****/
-  /********FONCTIONNEMENT*******/
-  .reservation {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: $light-grey;
-  }
-
+}
+@include desktop-version() {
   .operation {
-    color: $black;
-    padding: 18px;
-
-    .title__operation {
-      font-size: 24px;
-    }
-
-    .button__operation {
-      border-radius: 20px;
-      background-color: $light-grey;
-      box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-      font-size: 16px;
-      font-weight: 500;
-      display: flex;
-      padding: 20px;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .text__operation {
-      margin-left: 25px;
-    }
-  }
-
-  /********RESTAURANTS********/
-  .restaurants {
-    background-color: $light-grey;
-    padding: 18px;
-  }
-
-  /*****FOOTER******/
-
-  Footer {
-    background-color: #353535;
-    color: white;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 22px 20px;
-  }
-
-  .footer-txt {
     display: flex;
-    padding: 8px;
-  }
+    align-items: center;
+    text-align: center;
 
+    &__title {
+      display: flex;
+    }
+  }
+    .operation ul {
+      display: flex;
+      align-items: baseline;
+      gap: 22px;
+    }
+    .operation li {
+    padding-right: 30px;
+    }
+    
+}
+/********RESTAURANTS********/
+.restaurants {
+  background-color: $light-grey;
+  padding: 18px;
+}
+
+.card {
+  border-radius: 15px;
+  background-color: $white;
+  margin-bottom: 15px;
+}
+
+.card img {
+  border-radius: 20px 20px 0px 0px;
+  width: 100%;
+  height: 231px;
+  object-fit: cover;
+}
+
+.card-txt {
+  padding: 0px 0px 15px 15px;
+  font-size: 18px;
+  font-weight: 700;
+
+  &__subtitle {
+    font-size: 17px;
+    font-weight: 300;
+  }
+}
+
+@include desktop-version() {
+
+
+.first_line,
+.second_line {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+}
+}
+
+.fa-heart {
+  position: relative;
+  left: 150px;
+}
+/*****FOOTER******/
+
+Footer {
+  background-color: #353535;
+  color: white;
+  flex-direction: column;
+  padding: 22px 20px;
+  align-items: center;
+}
+
+Footer ul {
+  padding: 0;
+}
+
+Footer li {
+  cursor: pointer;
+}
+
+@include desktop-version() {
+  Footer {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: baseline;
+  text-align: center;
+  }
+  
+}
+
+.footer-text {
+  display: flex;
+  align-items: center;
+}
+
+#LogoFooter {
+  width: 137px;
+  height: 27px;
+  filter: brightness(0) invert(1);
+  padding-top: 5px;
+}
+
+@include desktop-version() {
   #LogoFooter {
-    width: 137px;
-    height: 27px;
-    color: $white;
+    display: flex;
   }
+}
 
-  .fa-utensils {
-    color: $white;
-  }
+.fa-utensils,
+.fa-handshake-angle{
+  color: $white;
+  padding-right: 10px;
 }
