--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -6,10 +6,15 @@ $black: #000;
 $white: #FFF;
 
 @mixin mobile-only {
-    @media screen and (max-width: 767.98px) {}
-}
+    @media screen and (max-width: 767.98px) {
 
-@media screen and (max-width: 767.98px) {
+    }
+}
+@mixin desktop-version {
+    @media screen and (min-width: 767.98px) {
+      @content;
+    }
+  }
 
     body {
         margin: 0;
@@ -18,14 +23,9 @@ $white: #FFF;
     main {
         color: $black;
     }
-    .menu {
-        background-color: $light-grey;
-        border-radius: 15px;
 
-        &__title {
-            display: flex;
-            align-items: center;
-        }
+    img {
+        object-fit: cover;
     }
     p {
         border-radius: 15px;
@@ -56,9 +56,14 @@ $white: #FFF;
     }
 
     .top_image img {
-        width: 375px;
+        width: 1440px;
         height: 275px;
-        object-fit: cover;
+    }
+    @include mobile-only() {
+        .top_image img {
+            width: 375px;
+            height: 275px;
+        }
     }
 
     .cta {
@@ -73,11 +78,13 @@ $white: #FFF;
 
     header {
         display: flex;
-        justify-content: center;
         align-items: center;
-        align-self: center;
-        padding: 30px 0px 31px 0px;
-        flex-direction: column;
+        padding: 12px;
+        justify-content: center;
+    }
+        header a {
+        display: flex;
+        align-items: center;
     }
 
     #LogoHeader {
@@ -86,30 +93,43 @@ $white: #FFF;
     }
 
     /******BODY*******/
+    .menu {
+        background-color: $light-grey;
+        border-radius: 15px;
 
+        &__title {
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    .card {}
     /*****FOOTER******/
 
     Footer {
         background-color: #353535;
         color: white;
         flex-direction: column;
-        align-items: flex-start;
         padding: 22px 20px;
-    }
-
-    .footer-txt {
+        align-items: center;
+      }
+      
+      
+      .footer-text {
         display: flex;
-        padding: 8px;
-    }
-
-    #LogoFooter {
+        align-items: center;
+      }
+      
+      #LogoFooter {
         width: 137px;
         height: 27px;
+        filter: brightness(0) invert(1);
+        padding-top: 5px;
+      }
+      
+      .fa-utensils,
+      .fa-handshake-angle{
         color: $white;
-    }
+        padding-right: 10px;
+      }
 
-    .fa-utensils {
-        color: $white;
-    }
-
-}
