--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,6 +22,7 @@ body {
   font-family: 'Roboto', serif;
 }
 
+
 ul {
   list-style-type: none;
 }
@@ -126,6 +127,18 @@ header {
     font-size: 16px;
     font-weight: 500;
   }
+  .number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #9356dc;
+    color: white;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    left: 45px;
+  }
 }
 @include desktop-version() {
   .operation {
@@ -141,11 +154,24 @@ header {
       display: flex;
       align-items: baseline;
       gap: 22px;
+      
     }
     .operation li {
     padding-right: 30px;
     }
     
+    .number {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50px;
+      background: #9356dc;
+      color: white;
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      left: 45px;
+    }
 }
 /********RESTAURANTS********/
 .restaurants {
@@ -157,13 +183,15 @@ header {
   border-radius: 15px;
   background-color: $white;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .card img {
   border-radius: 20px 20px 0px 0px;
   width: 100%;
-  height: 231px;
+  height: 230px;
   object-fit: cover;
+  box-sizing: border-box;
 }
 
 .card-txt {
@@ -177,19 +205,44 @@ header {
   }
 }
 
+.news {
+  background: #a9e0d1;
+  color: #3b8468;
+  border-radius: 2px;
+  padding: 7px 10px;
+  position: absolute;
+  top: 53rem;
+  left: 16rem;
+  font-weight: 500;
+
+  &__second {
+  top: 40rem;
+  left: 15rem;
+  }
+}
+
 @include desktop-version() {
 
+.restaurants {
+  max-width: 1300px;
+  margin: auto;
+  position: relative;
+}
+
+.container {
+
+}
 
 .first_line,
 .second_line {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   width: 80%;
+  gap: 20px;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
+  display: block;
 }
 
 .card img {
@@ -200,8 +253,11 @@ header {
 }
 
 .fa-heart {
+  background-color: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
   position: relative;
   left: 150px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out, $main-color 0.3 ease-in-out;
 }
 /*****FOOTER******/
 
