--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -17,9 +17,12 @@ $white: #FFFFFF;
     }
 }
 
-body {
+
+ body {
     margin: 0;
+    padding: 0;
     font-family: 'Roboto', serif;
+    
 }
 
 main {
@@ -30,7 +33,7 @@ h1 {
     font-family: "Shrikhand", serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 28px;
+        font-size: 1.75rem;
         line-height: 40px;
 } 
 
@@ -50,18 +53,11 @@ a {
 .top_image  {
     display: flex;
 
-img {
-    width: 100vw;
-    height: 350px;
-    object-fit: cover;
+        img {
+            width: 100vw;
+            height: 350px;
+            object-fit: cover;
 }
-}
-
-@include mobile-only() {
-    img {
-        width: 375px;
-        height: 275px;
-    }
 }
 
 .button {
@@ -69,7 +65,7 @@ img {
     display: flex;
     border-radius: 25px;
     padding-top: 20px;
-    color: $white !important;
+    padding-bottom: 35px;
 
     .cta {    
         border: 0px solid transparent;
@@ -95,6 +91,7 @@ img {
                 font-weight: 500;
                 justify-content: center;
             }
+        
 }
 
 /*******HEADER*******/
@@ -121,7 +118,9 @@ nav {
 }
 
 /******BODY*******/
+
 .container {
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -131,7 +130,16 @@ nav {
     z-index: 1;
     position: relative;
     justify-content: center;
+    
+}
 
+@media (min-width: 1024px) {
+.container {
+    width: 50%;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin: -80px auto 0 auto;
+}
 }
 
 .menu-title{
@@ -157,17 +165,33 @@ nav {
 
 .heart-label {
     position: relative;
-    cursor: pointer; 
+    cursor: pointer;
+    left: 250px;
+    bottom: 45px;
+}
+
+.fa-heart:before {
+    content: "\f004";
+    z-index: 1;
+    font-size: 1.2em;
+    position: relative;
+}
+
+
+.fa-regular {
+    font-weight: 400;
 }
 
 .heart-label::before {
-    content: '\f004'; 
+    content: '\f004';
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
     position: absolute;
-    top: 22px;
-    left: 20px;
+    bottom: 0px;
+    left: 1px;
     color: transparent;
+    font-size: 1.7em;;
+    z-index: 5;
 }
 
 .heart-checkbox:checked + .heart-label::before {
@@ -231,7 +255,6 @@ nav {
     background-color: $white;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
     margin: 12px;
-    padding: 4px;
     width: 634px;
     height: 69px;
 
@@ -242,13 +265,14 @@ nav {
     position: relative;
     cursor: pointer;
     overflow: hidden;
+    padding-left: 15px;
 }
 
 
 .price {
     display: flex;
     position: absolute;
-    right: 10px;
+    right: 0px;
     top: 50%; 
     transform: translateY(-50%); 
     transition: transform 0.3s ease; 
@@ -262,6 +286,10 @@ position: absolute;
 right: 10px;
 transform: translateY(30%); 
 }
+.card:hover .price {
+
+    transform: translateX(-48px); /* Décale le prix vers la gauche */
+}
 
 .marque-verif {
     position: absolute;
@@ -269,20 +297,23 @@ transform: translateY(30%);
     height: 69px;
     background-color: #6fd1b9;
     border-radius: 0px 15px 15px 0px;
-    transform: translateX(100%);
+    transform: translateX(0%);
     transition: transform 0.3s ease;
     bottom: -35px;
+
 }
-.checkbox:checked + .menu-label .marque-verif {
+
+
+.card:hover + .menu-label .marque-verif {
     transform: translateX(0%); 
     visibility: visible;
 }
 
-.checkbox:checked + .menu-label .prix {
-    transform: translateX(-48px);
+.card:hover + .menu-label .price {
+    transform: translateX(-5px);
 }
 
-.checkbox:checked + .menu-label .card-txt
+.card:hover + .menu-label .card-txt
 {
   width: calc(80% - 75px); 
   overflow: hidden;
@@ -297,7 +328,20 @@ transform: translateY(30%);
     left: 20px;
 }
 
-@include mobile-only() {
+.fa-lg {
+    font-size: 1.25em;
+    line-height: .05em;
+    vertical-align: -.075em;
+    color: white;
+}
+
+.fa-check-circle:before, .fa-circle-check:before {
+    content: "\f058";
+    top: 9px;
+    position: absolute;
+}
+
+@media (max-width: 700px) {
     .menu {
         display: flex;
         align-items: center;
@@ -305,15 +349,26 @@ transform: translateY(30%);
 
     }
 
+    h1 {
+        font-size: 25px;
+    }
     
     .card {
         display: flex;
         box-sizing: border-box;
         justify-content: center;
         flex-direction: column;
-        max-width: 120px;;
         align-items: center;
+        height: 69px;
+        width: 100%;
+        
     }
+    .card:hover .card-text {
+        width: calc(100% - 75px);
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
 }
 
 /*****FOOTER******/
